--- a/src/index.css
+++ b/src/index.css
@@ -175,3 +175,49 @@ html:empty {
 .allocation-holder{
 border-color: rgba(10, 69, 110, 1) ;
 }
+
+.w-75{
+  width: 75%;
+}
+.custom-table{
+  left: 12.5%;
+  top: 30%;
+  padding: 2px 40px 40px 40px;
+}
+.w-30{
+  width: 30%;
+}
+.w-20{
+  width: 20%;
+}
+.table_row{
+  padding: 16px 8px;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  background-color: rgba(58, 123, 191, 0.3);
+}
+.p-0-imp{
+  width: 200px;
+  border: 0.5px solid #fff;
+}
+.white-space{
+  white-space: nowrap;
+}
+.table-responsive {
+	overflow-x: auto;
+	-webkit-overflow-scrolling: touch;
+}
+.table{
+  display: table;
+  width: 100%;
+  border-collapse: separate;
+	border-spacing: 0 15px;
+}
+.table-row{display: table-row; }
+.table-cell{display: table-cell; width: auto; padding: 1rem; white-space: nowrap;}
+@media (max-width:767px) {
+  .custom-table{
+    width:100%;
+  }
+  .delbtn{width: 100%;}
+}
